--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <nav class="navbar">
+        <div class="nav-toggle">
+            <button id="navToggle" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+            </button>
+        </div>
         <div class="nav-brand">
             <i class="fas fa-wallet"></i>
             <span>Finance Tracker</span>
-        </div>
-        <div class="nav-toggle">
-            <button id="navToggle">
-                <i class="fas fa-bars"></i>
-            </button>
         </div>
         <div class="nav-menu">
             <div class="nav-items">
